# phototag

./: AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  phototag-watch.example.toml
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  lib.rs  llm_client.rs  main.rs  tag.rs
crates/server/tests/: llm_client.rs  tag_endpoint.rs
crates/server/tests/helpers/: mod.rs
crates/watch/: Cargo.toml
crates/watch/src/: backfill.rs  client.rs  config.rs  exif.rs  lib.rs  main.rs  pipeline.rs  watcher.rs
crates/watch/tests/: backfill.rs  client.rs  pipeline.rs  watcher.rs
crates/watch/tests/helpers/: mod.rs
docs/plans/: 2026-07-21-phototag-implementation.md  2026-07-22-version-marker-reindex-implementation.md
docs/specs/: 2026-07-21-image-tagger-design.md  2026-07-21-phototag-design.md  2026-07-22-version-marker-reindex-design.md
docs/superpowers/specs/: 2026-07-21-image-tagger-design.md
