[package]
name = "phototag-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "phototag-server"
path = "src/main.rs"

[lib]
name = "phototag_server"
path = "src/lib.rs"

[dependencies]
phototag-common = { path = "../common" }
anyhow = { workspace = true }
axum = "0.8"
base64 = "0.22"
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
